switch image icon to svg icon

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!-- Navigation -->
         <nav class="nav">
             <div class="wrapper">
-                <a href="#" class="logo"><img src="dist/assets/images/logo.svg" class="logo-brand" alt="logo" /></a>
+                <a href="index.html" class="logo"><img src="dist/assets/images/logo.svg" class="logo-brand" alt="logo" /></a>
                 <div class="btn-toggle">
                     <svg id="open" class="toggle u-visible" data-target="open" width="36" height="36" viewBox="0 0 36 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M0 0H36V4.03125H0V0ZM0 13.9688V10.0312H36V13.9688H0ZM0 24V19.9688H36V24H0Z" fill="black" />
@@ -98,21 +98,48 @@
                 <div class="services-card">
                     <div class="card card-block">
                         <div class='icon'>
-                            <img src="dist/assets/images/save.svg" alt="icon-save" />
+                            <svg width="121" height="120" viewBox="0 0 121 120" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <circle cx="60.5" cy="60" r="60" fill="url(#paint_linear)" />
+                                <path d="M71.235 38.635C70.885 39.825 70.5 41.225 70.5 43.92L80.58 54H82.75V63.8L75.925 65.305L71.76 80.25H65.25V75H49.5V80.25H42.955C40.715 72.41 37.25 59.11 37.25 54C37.25 48.225 41.975 43.5 47.75 43.5H64.9C66.055 41.505 68.155 39.475 71.235 38.635ZM74 33C66.405 33 62.275 38.25 62.275 38.25H47.75C39.175 38.25 32 45.145 32 54C32 62.155 39 85.5 39 85.5H54.75V80.25H60V85.5H75.75L80.125 69.75L88 68V48.75H82.75L75.75 41.75C75.75 40.49 77.5 38.32 77.5 36.5C77.5 34.575 75.925 33 74 33ZM63.5 52.25H49.5V47H63.5V52.25ZM71.375 57.5C69.94 57.5 68.75 56.31 68.75 54.875C68.75 53.44 69.94 52.25 71.375 52.25C72.81 52.25 74 53.44 74 54.875C74 56.31 72.81 57.5 71.375 57.5Z" fill="white" />
+                                <defs>
+                                    <linearGradient id="paint_linear" x1="2.59677" y1="4.19101e-05" x2="123.622" y2="5.1194" gradientUnits="userSpaceOnUse">
+                                        <stop stop-color="#1A21BC" />
+                                        <stop offset="1" stop-color="#8B38DD" />
+                                    </linearGradient>
+                                </defs>
+                            </svg>
                         </div>
                         <h4 class="card-title">Économique</h4>
                         <div class="card-description">Effectuez autant de transactions que vous le souhaitez, en tout temps et toujours sans frais.</div>
                     </div>
                     <div class="card card-block">
                         <div class="icon">
-                            <img src="dist/assets/images/security.svg" alt="icon-security" />
+                            <svg width="120" height="120" viewBox="0 0 120 120" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <circle cx="60" cy="60" r="60" fill="url(#paint_linear)" />
+                                <path d="M60.4091 33L37.5 43.1818V58.4545C37.5 72.5818 47.2745 85.7927 60.4091 89C73.5436 85.7927 83.3182 72.5818 83.3182 58.4545V43.1818L60.4091 33ZM78.2273 58.4545C78.2273 69.96 70.6418 80.5745 60.4091 83.7309C50.1764 80.5745 42.5909 69.96 42.5909 58.4545V46.4909L60.4091 38.5745L78.2273 46.4909V58.4545ZM48.7255 59.9564L45.1364 63.5455L55.3182 73.7273L75.6818 53.3636L72.0927 49.7491L55.3182 66.5236L48.7255 59.9564Z" fill="white" />
+                                <defs>
+                                    <linearGradient id="paint_linear" x1="2.59677" y1="4.19101e-05" x2="123.622" y2="5.1194" gradientUnits="userSpaceOnUse">
+                                        <stop stop-color="#1A21BC" />
+                                        <stop offset="1" stop-color="#8B38DD" />
+                                    </linearGradient>
+                                </defs>
+                            </svg>
                         </div>
                         <h4 class="card-title">Fiable</h4>
                         <div class="card-description">Obtenez en temps réel des informations fiables et précises sur le cours de crypto-monnaies.</div>
                     </div>
                     <div class="card card-block">
                         <div class="icon">
-                            <img src="dist/assets/images/lock.svg" alt="icon-lock" />
+                            <svg width="121" height="120" viewBox="0 0 121 120" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <circle cx="60.5" cy="60" r="60" fill="url(#paint_linear)" />
+                                <path d="M76.3333 50.6667H73.6667V45.3333C73.6667 37.9733 67.6933 32 60.3333 32C52.9733 32 47 37.9733 47 45.3333V50.6667H44.3333C41.4 50.6667 39 53.0667 39 56V82.6667C39 85.6 41.4 88 44.3333 88H76.3333C79.2667 88 81.6667 85.6 81.6667 82.6667V56C81.6667 53.0667 79.2667 50.6667 76.3333 50.6667ZM52.3333 45.3333C52.3333 40.9067 55.9067 37.3333 60.3333 37.3333C64.76 37.3333 68.3333 40.9067 68.3333 45.3333V50.6667H52.3333V45.3333ZM76.3333 82.6667H44.3333V56H76.3333V82.6667ZM60.3333 74.6667C63.2667 74.6667 65.6667 72.2667 65.6667 69.3333C65.6667 66.4 63.2667 64 60.3333 64C57.4 64 55 66.4 55 69.3333C55 72.2667 57.4 74.6667 60.3333 74.6667Z" fill="white" />
+                                <defs>
+                                    <linearGradient id="paint_linear" x1="2.59677" y1="4.19101e-05" x2="123.622" y2="5.1194" gradientUnits="userSpaceOnUse">
+                                        <stop stop-color="#1A21BC" />
+                                        <stop offset="1" stop-color="#8B38DD" />
+                                    </linearGradient>
+                                </defs>
+                            </svg>
                         </div>
                         <h4 class="card-title">Sécuritaire</h4>
                         <div class="card-description">Notre plateforme a été conçue par les informaticien·es les plus compétent·es du Québec!</div>
@@ -151,6 +178,42 @@
                                         </linearGradient>
                                     </defs>
                                 </svg>
+                                <svg width="24" height="24" viewBox="0 0 28 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M13.0554 0.717387C13.3667 -0.178173 14.6333 -0.178173 14.9446 0.717387L17.5334 8.16501C17.6707 8.56008 18.0394 8.82795 18.4575 8.83647L26.3406 8.99711C27.2886 9.01643 27.6799 10.221 26.9244 10.7938L20.6413 15.5573C20.308 15.81 20.1671 16.2434 20.2883 16.6438L22.5715 24.1907C22.846 25.0982 21.8214 25.8426 21.0432 25.3011L14.5712 20.7975C14.2279 20.5586 13.7721 20.5586 13.4288 20.7975L6.95684 25.3011C6.1786 25.8426 5.15396 25.0982 5.42851 24.1907L7.71173 16.6438C7.83285 16.2434 7.69202 15.81 7.35873 15.5573L1.0756 10.7938C0.320066 10.221 0.711446 9.01643 1.65937 8.99711L9.54246 8.83647C9.96063 8.82795 10.3293 8.56008 10.4666 8.16501L13.0554 0.717387Z" fill="url(#paint0_linear)" />
+                                    <defs>
+                                        <linearGradient id="paint0_linear" x1="-2" y1="-5.72093" x2="26.6512" y2="43.0233" gradientUnits="userSpaceOnUse">
+                                            <stop stop-color="#FFC700" />
+                                            <stop offset="1" stop-color="#FF782D" />
+                                        </linearGradient>
+                                    </defs>
+                                </svg>
+                                <svg width="24" height="24" viewBox="0 0 28 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M13.0554 0.717387C13.3667 -0.178173 14.6333 -0.178173 14.9446 0.717387L17.5334 8.16501C17.6707 8.56008 18.0394 8.82795 18.4575 8.83647L26.3406 8.99711C27.2886 9.01643 27.6799 10.221 26.9244 10.7938L20.6413 15.5573C20.308 15.81 20.1671 16.2434 20.2883 16.6438L22.5715 24.1907C22.846 25.0982 21.8214 25.8426 21.0432 25.3011L14.5712 20.7975C14.2279 20.5586 13.7721 20.5586 13.4288 20.7975L6.95684 25.3011C6.1786 25.8426 5.15396 25.0982 5.42851 24.1907L7.71173 16.6438C7.83285 16.2434 7.69202 15.81 7.35873 15.5573L1.0756 10.7938C0.320066 10.221 0.711446 9.01643 1.65937 8.99711L9.54246 8.83647C9.96063 8.82795 10.3293 8.56008 10.4666 8.16501L13.0554 0.717387Z" fill="url(#paint0_linear)" />
+                                    <defs>
+                                        <linearGradient id="paint0_linear" x1="-2" y1="-5.72093" x2="26.6512" y2="43.0233" gradientUnits="userSpaceOnUse">
+                                            <stop stop-color="#FFC700" />
+                                            <stop offset="1" stop-color="#FF782D" />
+                                        </linearGradient>
+                                    </defs>
+                                </svg>
+                                <svg width="24" height="24" viewBox="0 0 28 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M13.0554 0.717387C13.3667 -0.178173 14.6333 -0.178173 14.9446 0.717387L17.5334 8.16501C17.6707 8.56008 18.0394 8.82795 18.4575 8.83647L26.3406 8.99711C27.2886 9.01643 27.6799 10.221 26.9244 10.7938L20.6413 15.5573C20.308 15.81 20.1671 16.2434 20.2883 16.6438L22.5715 24.1907C22.846 25.0982 21.8214 25.8426 21.0432 25.3011L14.5712 20.7975C14.2279 20.5586 13.7721 20.5586 13.4288 20.7975L6.95684 25.3011C6.1786 25.8426 5.15396 25.0982 5.42851 24.1907L7.71173 16.6438C7.83285 16.2434 7.69202 15.81 7.35873 15.5573L1.0756 10.7938C0.320066 10.221 0.711446 9.01643 1.65937 8.99711L9.54246 8.83647C9.96063 8.82795 10.3293 8.56008 10.4666 8.16501L13.0554 0.717387Z" fill="url(#paint0_linear)" />
+                                    <defs>
+                                        <linearGradient id="paint0_linear" x1="-2" y1="-5.72093" x2="26.6512" y2="43.0233" gradientUnits="userSpaceOnUse">
+                                            <stop stop-color="#FFC700" />
+                                            <stop offset="1" stop-color="#FF782D" />
+                                        </linearGradient>
+                                    </defs>
+                                </svg>
+                                <svg width="24" height="24" viewBox="0 0 28 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M13.0554 0.717387C13.3667 -0.178173 14.6333 -0.178173 14.9446 0.717387L17.5334 8.16501C17.6707 8.56008 18.0394 8.82795 18.4575 8.83647L26.3406 8.99711C27.2886 9.01643 27.6799 10.221 26.9244 10.7938L20.6413 15.5573C20.308 15.81 20.1671 16.2434 20.2883 16.6438L22.5715 24.1907C22.846 25.0982 21.8214 25.8426 21.0432 25.3011L14.5712 20.7975C14.2279 20.5586 13.7721 20.5586 13.4288 20.7975L6.95684 25.3011C6.1786 25.8426 5.15396 25.0982 5.42851 24.1907L7.71173 16.6438C7.83285 16.2434 7.69202 15.81 7.35873 15.5573L1.0756 10.7938C0.320066 10.221 0.711446 9.01643 1.65937 8.99711L9.54246 8.83647C9.96063 8.82795 10.3293 8.56008 10.4666 8.16501L13.0554 0.717387Z" fill="url(#paint0_linear)" />
+                                    <defs>
+                                        <linearGradient id="paint0_linear" x1="-2" y1="-5.72093" x2="26.6512" y2="43.0233" gradientUnits="userSpaceOnUse">
+                                            <stop stop-color="#FFC700" />
+                                            <stop offset="1" stop-color="#FF782D" />
+                                        </linearGradient>
+                                    </defs>
+                                </svg>
                             </div>
                             <div class="description">
                                 "L’expérience utilisateur est magique! J’ai rarement utilisé une interface de gestion aussi bien conçue. Bravo aux designers d’interface!"
@@ -164,6 +227,42 @@
                         </div>
                         <div class="card-details">
                             <div class="rating">
+                                <svg width="24" height="24" viewBox="0 0 28 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M13.0554 0.717387C13.3667 -0.178173 14.6333 -0.178173 14.9446 0.717387L17.5334 8.16501C17.6707 8.56008 18.0394 8.82795 18.4575 8.83647L26.3406 8.99711C27.2886 9.01643 27.6799 10.221 26.9244 10.7938L20.6413 15.5573C20.308 15.81 20.1671 16.2434 20.2883 16.6438L22.5715 24.1907C22.846 25.0982 21.8214 25.8426 21.0432 25.3011L14.5712 20.7975C14.2279 20.5586 13.7721 20.5586 13.4288 20.7975L6.95684 25.3011C6.1786 25.8426 5.15396 25.0982 5.42851 24.1907L7.71173 16.6438C7.83285 16.2434 7.69202 15.81 7.35873 15.5573L1.0756 10.7938C0.320066 10.221 0.711446 9.01643 1.65937 8.99711L9.54246 8.83647C9.96063 8.82795 10.3293 8.56008 10.4666 8.16501L13.0554 0.717387Z" fill="url(#paint0_linear)" />
+                                    <defs>
+                                        <linearGradient id="paint0_linear" x1="-2" y1="-5.72093" x2="26.6512" y2="43.0233" gradientUnits="userSpaceOnUse">
+                                            <stop stop-color="#FFC700" />
+                                            <stop offset="1" stop-color="#FF782D" />
+                                        </linearGradient>
+                                    </defs>
+                                </svg>
+                                <svg width="24" height="24" viewBox="0 0 28 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M13.0554 0.717387C13.3667 -0.178173 14.6333 -0.178173 14.9446 0.717387L17.5334 8.16501C17.6707 8.56008 18.0394 8.82795 18.4575 8.83647L26.3406 8.99711C27.2886 9.01643 27.6799 10.221 26.9244 10.7938L20.6413 15.5573C20.308 15.81 20.1671 16.2434 20.2883 16.6438L22.5715 24.1907C22.846 25.0982 21.8214 25.8426 21.0432 25.3011L14.5712 20.7975C14.2279 20.5586 13.7721 20.5586 13.4288 20.7975L6.95684 25.3011C6.1786 25.8426 5.15396 25.0982 5.42851 24.1907L7.71173 16.6438C7.83285 16.2434 7.69202 15.81 7.35873 15.5573L1.0756 10.7938C0.320066 10.221 0.711446 9.01643 1.65937 8.99711L9.54246 8.83647C9.96063 8.82795 10.3293 8.56008 10.4666 8.16501L13.0554 0.717387Z" fill="url(#paint0_linear)" />
+                                    <defs>
+                                        <linearGradient id="paint0_linear" x1="-2" y1="-5.72093" x2="26.6512" y2="43.0233" gradientUnits="userSpaceOnUse">
+                                            <stop stop-color="#FFC700" />
+                                            <stop offset="1" stop-color="#FF782D" />
+                                        </linearGradient>
+                                    </defs>
+                                </svg>
+                                <svg width="24" height="24" viewBox="0 0 28 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M13.0554 0.717387C13.3667 -0.178173 14.6333 -0.178173 14.9446 0.717387L17.5334 8.16501C17.6707 8.56008 18.0394 8.82795 18.4575 8.83647L26.3406 8.99711C27.2886 9.01643 27.6799 10.221 26.9244 10.7938L20.6413 15.5573C20.308 15.81 20.1671 16.2434 20.2883 16.6438L22.5715 24.1907C22.846 25.0982 21.8214 25.8426 21.0432 25.3011L14.5712 20.7975C14.2279 20.5586 13.7721 20.5586 13.4288 20.7975L6.95684 25.3011C6.1786 25.8426 5.15396 25.0982 5.42851 24.1907L7.71173 16.6438C7.83285 16.2434 7.69202 15.81 7.35873 15.5573L1.0756 10.7938C0.320066 10.221 0.711446 9.01643 1.65937 8.99711L9.54246 8.83647C9.96063 8.82795 10.3293 8.56008 10.4666 8.16501L13.0554 0.717387Z" fill="url(#paint0_linear)" />
+                                    <defs>
+                                        <linearGradient id="paint0_linear" x1="-2" y1="-5.72093" x2="26.6512" y2="43.0233" gradientUnits="userSpaceOnUse">
+                                            <stop stop-color="#FFC700" />
+                                            <stop offset="1" stop-color="#FF782D" />
+                                        </linearGradient>
+                                    </defs>
+                                </svg>
+                                <svg width="24" height="24" viewBox="0 0 28 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M13.0554 0.717387C13.3667 -0.178173 14.6333 -0.178173 14.9446 0.717387L17.5334 8.16501C17.6707 8.56008 18.0394 8.82795 18.4575 8.83647L26.3406 8.99711C27.2886 9.01643 27.6799 10.221 26.9244 10.7938L20.6413 15.5573C20.308 15.81 20.1671 16.2434 20.2883 16.6438L22.5715 24.1907C22.846 25.0982 21.8214 25.8426 21.0432 25.3011L14.5712 20.7975C14.2279 20.5586 13.7721 20.5586 13.4288 20.7975L6.95684 25.3011C6.1786 25.8426 5.15396 25.0982 5.42851 24.1907L7.71173 16.6438C7.83285 16.2434 7.69202 15.81 7.35873 15.5573L1.0756 10.7938C0.320066 10.221 0.711446 9.01643 1.65937 8.99711L9.54246 8.83647C9.96063 8.82795 10.3293 8.56008 10.4666 8.16501L13.0554 0.717387Z" fill="url(#paint0_linear)" />
+                                    <defs>
+                                        <linearGradient id="paint0_linear" x1="-2" y1="-5.72093" x2="26.6512" y2="43.0233" gradientUnits="userSpaceOnUse">
+                                            <stop stop-color="#FFC700" />
+                                            <stop offset="1" stop-color="#FF782D" />
+                                        </linearGradient>
+                                    </defs>
+                                </svg>
                                 <svg width="24" height="24" viewBox="0 0 28 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M13.0554 0.717387C13.3667 -0.178173 14.6333 -0.178173 14.9446 0.717387L17.5334 8.16501C17.6707 8.56008 18.0394 8.82795 18.4575 8.83647L26.3406 8.99711C27.2886 9.01643 27.6799 10.221 26.9244 10.7938L20.6413 15.5573C20.308 15.81 20.1671 16.2434 20.2883 16.6438L22.5715 24.1907C22.846 25.0982 21.8214 25.8426 21.0432 25.3011L14.5712 20.7975C14.2279 20.5586 13.7721 20.5586 13.4288 20.7975L6.95684 25.3011C6.1786 25.8426 5.15396 25.0982 5.42851 24.1907L7.71173 16.6438C7.83285 16.2434 7.69202 15.81 7.35873 15.5573L1.0756 10.7938C0.320066 10.221 0.711446 9.01643 1.65937 8.99711L9.54246 8.83647C9.96063 8.82795 10.3293 8.56008 10.4666 8.16501L13.0554 0.717387Z" fill="url(#paint0_linear)" />
                                     <defs>
