added favicon, button hover state

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=7">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Titre</title>
+    <title>CryptoQc</title>
+    <link rel="shortcut icon" type="image/jpg" href="dist\assets\images\favicon.png" />
 
     <link rel="stylesheet" href="dist/styles/main.css" />
 </head>
@@ -68,10 +69,10 @@
                         </a>
                         <a href="#" class="btn btn-link">
                             <svg width="43" height="43" viewBox="0 0 43 43" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <circle cx="21.5" cy="21.5" r="21.5" fill="url(#paint0_linear)" />
+                                <circle cx="21.5" cy="21.5" r="21.5" fill="url(#paint_linear)" />
                                 <path d="M32.5 21.134C33.1667 21.5189 33.1667 22.4811 32.5 22.866L17.5 31.5263C16.8333 31.9112 16 31.4301 16 30.6603L16 13.3397C16 12.5699 16.8333 12.0888 17.5 12.4737L32.5 21.134Z" fill="white" />
                                 <defs>
-                                    <linearGradient id="paint0_linear" x1="1.22757e-06" y1="-5" x2="38.5" y2="60.5" gradientUnits="userSpaceOnUse">
+                                    <linearGradient id="paint_linear" x1="1.22757e-06" y1="-5" x2="38.5" y2="60.5" gradientUnits="userSpaceOnUse">
                                         <stop stop-color="#FFC700" />
                                         <stop offset="1" stop-color="#FF782D" />
                                     </linearGradient>
@@ -99,12 +100,12 @@
                     <div class="card card-block">
                         <div class='icon'>
                             <svg width="121" height="120" viewBox="0 0 121 120" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <circle cx="60.5" cy="60" r="60" fill="url(#paint_linear)" />
+                                <circle cx="60.5" cy="60" r="60" fill="url(#linear)" />
                                 <path d="M71.235 38.635C70.885 39.825 70.5 41.225 70.5 43.92L80.58 54H82.75V63.8L75.925 65.305L71.76 80.25H65.25V75H49.5V80.25H42.955C40.715 72.41 37.25 59.11 37.25 54C37.25 48.225 41.975 43.5 47.75 43.5H64.9C66.055 41.505 68.155 39.475 71.235 38.635ZM74 33C66.405 33 62.275 38.25 62.275 38.25H47.75C39.175 38.25 32 45.145 32 54C32 62.155 39 85.5 39 85.5H54.75V80.25H60V85.5H75.75L80.125 69.75L88 68V48.75H82.75L75.75 41.75C75.75 40.49 77.5 38.32 77.5 36.5C77.5 34.575 75.925 33 74 33ZM63.5 52.25H49.5V47H63.5V52.25ZM71.375 57.5C69.94 57.5 68.75 56.31 68.75 54.875C68.75 53.44 69.94 52.25 71.375 52.25C72.81 52.25 74 53.44 74 54.875C74 56.31 72.81 57.5 71.375 57.5Z" fill="white" />
                                 <defs>
-                                    <linearGradient id="paint_linear" x1="2.59677" y1="4.19101e-05" x2="123.622" y2="5.1194" gradientUnits="userSpaceOnUse">
-                                        <stop stop-color="#1A21BC" />
-                                        <stop offset="1" stop-color="#8B38DD" />
+                                    <linearGradient id="linear" x1="2.59677" y1="4.19101e-05" x2="123.622" y2="5.1194" gradientUnits="userSpaceOnUse">
+                                        <stop stop-color="#4424BF" />
+                                        <stop offset="1" stop-color="#8236DA" />
                                     </linearGradient>
                                 </defs>
                             </svg>
@@ -115,10 +116,10 @@
                     <div class="card card-block">
                         <div class="icon">
                             <svg width="120" height="120" viewBox="0 0 120 120" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <circle cx="60" cy="60" r="60" fill="url(#paint_linear)" />
+                                <circle cx="60" cy="60" r="60" fill="url(#linear)" />
                                 <path d="M60.4091 33L37.5 43.1818V58.4545C37.5 72.5818 47.2745 85.7927 60.4091 89C73.5436 85.7927 83.3182 72.5818 83.3182 58.4545V43.1818L60.4091 33ZM78.2273 58.4545C78.2273 69.96 70.6418 80.5745 60.4091 83.7309C50.1764 80.5745 42.5909 69.96 42.5909 58.4545V46.4909L60.4091 38.5745L78.2273 46.4909V58.4545ZM48.7255 59.9564L45.1364 63.5455L55.3182 73.7273L75.6818 53.3636L72.0927 49.7491L55.3182 66.5236L48.7255 59.9564Z" fill="white" />
                                 <defs>
-                                    <linearGradient id="paint_linear" x1="2.59677" y1="4.19101e-05" x2="123.622" y2="5.1194" gradientUnits="userSpaceOnUse">
+                                    <linearGradient id="linear" x1="2.59677" y1="4.19101e-05" x2="123.622" y2="5.1194" gradientUnits="userSpaceOnUse">
                                         <stop stop-color="#1A21BC" />
                                         <stop offset="1" stop-color="#8B38DD" />
                                     </linearGradient>
@@ -131,10 +132,10 @@
                     <div class="card card-block">
                         <div class="icon">
                             <svg width="121" height="120" viewBox="0 0 121 120" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <circle cx="60.5" cy="60" r="60" fill="url(#paint_linear)" />
+                                <circle cx="60.5" cy="60" r="60" fill="url(#linear)" />
                                 <path d="M76.3333 50.6667H73.6667V45.3333C73.6667 37.9733 67.6933 32 60.3333 32C52.9733 32 47 37.9733 47 45.3333V50.6667H44.3333C41.4 50.6667 39 53.0667 39 56V82.6667C39 85.6 41.4 88 44.3333 88H76.3333C79.2667 88 81.6667 85.6 81.6667 82.6667V56C81.6667 53.0667 79.2667 50.6667 76.3333 50.6667ZM52.3333 45.3333C52.3333 40.9067 55.9067 37.3333 60.3333 37.3333C64.76 37.3333 68.3333 40.9067 68.3333 45.3333V50.6667H52.3333V45.3333ZM76.3333 82.6667H44.3333V56H76.3333V82.6667ZM60.3333 74.6667C63.2667 74.6667 65.6667 72.2667 65.6667 69.3333C65.6667 66.4 63.2667 64 60.3333 64C57.4 64 55 66.4 55 69.3333C55 72.2667 57.4 74.6667 60.3333 74.6667Z" fill="white" />
                                 <defs>
-                                    <linearGradient id="paint_linear" x1="2.59677" y1="4.19101e-05" x2="123.622" y2="5.1194" gradientUnits="userSpaceOnUse">
+                                    <linearGradient id="linear" x1="2.59677" y1="4.19101e-05" x2="123.622" y2="5.1194" gradientUnits="userSpaceOnUse">
                                         <stop stop-color="#1A21BC" />
                                         <stop offset="1" stop-color="#8B38DD" />
                                     </linearGradient>
